--- a/package.json
+++ b/package.json
@@ -10,9 +10,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
+    "cron": "^1.1.0",
+    "csv-parse": "^1.1.1",
     "express": "^4.14.0",
-    "mongoose": "^4.5.2"
+    "express-session": "^1.13.0",
+    "moment": "^2.13.0",
+    "mongoose": "^4.5.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "twilio": "^2.9.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^1.5.4",
+    "gulp-watch": "^4.3.8"
   }
 }
