--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
+    "connect-multiparty": "^2.0.0",
     "cors": "^2.7.1",
     "cron": "^1.1.0",
-    "csv-parse": "^1.1.1",
+    "csv": "^1.1.0",
     "express": "^4.14.0",
     "express-session": "^1.13.0",
     "moment": "^2.13.0",
     "mongoose": "^4.5.2",
+    "multiparty": "^4.1.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "twilio": "^2.9.1"
