--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.3.0",
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "connect-multiparty": "^2.0.0",
     "cors": "^2.7.1",
